# vistream-rs

./: .gitignore  Cargo.toml
camera-server/: Cargo.toml  LICENSE
camera-server/src/: main.rs  parser.rs  server.rs  shared.rs
protocol/: Cargo.toml  client-stream.md
protocol/src/: camera.rs  fs.rs  lib.rs  stream.rs
src/: .camera.rs.swp  camera.rs  main.rs  output.txt  signal_thread.rs  thread.rs
vistream/: Cargo.toml
vistream/examples/: dummy_locator.rs  main.rs
vistream/src/: camera.rs  client.rs  error.rs  frame.rs  lib.rs  main.rs  stream.rs  transform.rs
vistream/src/ws/: stream.rs
