[package]
name = "vistream"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
lazy_static = "1.5.0"
libcamera = "0.2.3"
ndarray = "0.16.1"
thiserror = "2.0.3"
tungstenite = { version = "0.24.0", optional = true }
turbojpeg = "1.1.1"
wgpu = "22.1.0"

[features]
web = ["dep:tungstenite"]

